feat: 유저 독서 리포트의 통계 에서 에러 던지기 삭제, boolean 필드 추가 전송